Bug not showing blurbVerticalSeries
[fix] When no poster blurbVerticalSeries graphic background doesn't show

--- a/src/components/vod/blurb/blurbVerticalSeries.scss
+++ b/src/components/vod/blurb/blurbVerticalSeries.scss
@@ -82,6 +82,10 @@
             }
             .card-img-top {
                 z-index: 0;
+                max-height: 300px;
+                padding-top: 177%;
+                position: relative;
+                width: 100%;
             }
             .card-text{
                 z-index: 1;
@@ -104,13 +108,6 @@
             }
             &.background {
                 &::after{
-                    content: '';
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    top: 0;
-                    left: 0;
-                    z-index: 0;
                 }
             }
         }
